tickets service update and nats update

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -21,6 +21,15 @@ build:
       docker:
         dockerfile: Dockerfile
       sync:
+        infer:
+          - "**/*.js"
+          - "**/*.jsx"
+          - "**/*.css"
+    - image: sureshben/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
         manual:
-          - src: 'src/*'
+          - src: 'src/**/*.js'
             dest: .
