--- a/auth/package.json
+++ b/auth/package.json
@@ -9,9 +9,11 @@
     "author": "Suresh Ben",
     "license": "ISC",
     "dependencies": {
+        "@sbticketsproject/shared": "^1.0.13",
         "bcrypt": "^5.1.0",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "express-validator": "^7.0.1",
