order service publisher update

--- a/infra/k8s/auth-deploy.yaml
+++ b/infra/k8s/auth-deploy.yaml
@@ -16,6 +16,8 @@ spec:
         - name: auth
           image: sureshben/auth
           env:
+            - name: MONGO_URI
+              value: 'mongodb://auth-mongo-cluster-service:27017/auth'
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
