--- a/infra/k8s/ingress-deploy.yaml
+++ b/infra/k8s/ingress-deploy.yaml
@@ -24,6 +24,13 @@ spec:
                 name: tickets-cluster-service
                 port:
                   number: 3000
+          - path: /api/orders/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: orders-cluster-service
+                port:
+                  number: 3000
           - path: /?(.*)
             pathType: Prefix
             backend:
