--- a/orders/package.json
+++ b/orders/package.json
@@ -1,19 +1,18 @@
 {
-    "name": "auth-service",
+    "name": "orders",
     "version": "1.0.0",
-    "description": "This service takes care of authentication of users",
-    "main": "src/index.js",
+    "description": "",
+    "main": "index.js",
     "scripts": {
-        "start": "nodemon ./src/index.js"
+        "start": "nodemon ./src/index"
     },
-    "author": "Suresh Ben",
+    "keywords": [],
+    "author": "",
     "license": "ISC",
     "dependencies": {
         "@sbticketsproject/shared": "^1.0.16",
-        "bcrypt": "^5.1.0",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "express-validator": "^7.0.1",
