--- a/expiration/package.json
+++ b/expiration/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "orders",
+    "name": "expiration",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -11,12 +11,6 @@
     "license": "ISC",
     "dependencies": {
         "@sbticketsproject/shared": "^1.1.1",
-        "body-parser": "^1.20.2",
-        "cookie-parser": "^1.4.6",
-        "express": "^4.18.2",
-        "express-async-errors": "^3.1.1",
-        "express-validator": "^7.0.1",
-        "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.3.1",
         "mongoose-update-if-current": "^1.4.0",
         "nodemon": "^2.0.22"
