--- a/payments/package.json
+++ b/payments/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "orders",
+    "name": "payments",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -16,7 +16,7 @@
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "express-validator": "^7.0.1",
-        "jsonwebtoken": "^9.0.0",
+        "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.3.1",
         "mongoose-update-if-current": "^1.4.0",
         "nodemon": "^2.0.22"
