--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -32,6 +32,14 @@ build:
         manual:
           - src: 'src/**/*.js'
             dest: .
+    - image: sureshben/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.js'
+            dest: .
     - image: sureshben/client
       context: client
       docker:
