--- a/tickets/package.json
+++ b/tickets/package.json
@@ -10,7 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@sbticketsproject/shared": "^1.0.16",
+        "@sbticketsproject/shared": "^1.1.1",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
         "express": "^4.18.2",
@@ -18,6 +18,7 @@
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.3.1",
+        "mongoose-update-if-current": "^1.4.0",
         "nodemon": "^2.0.22"
     }
 }
