--- a/infra/k8s/ingress-deploy.yaml
+++ b/infra/k8s/ingress-deploy.yaml
@@ -31,6 +31,13 @@ spec:
                 name: orders-cluster-service
                 port:
                   number: 3000
+          - path: /api/payments/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: payments-cluster-service
+                port:
+                  number: 3000
           - path: /?(.*)
             pathType: Prefix
             backend:
