--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -40,6 +40,14 @@ build:
         manual:
           - src: 'src/**/*.js'
             dest: .
+    - image: sureshben/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.js'
+            dest: .
     - image: sureshben/client
       context: client
       docker:
