--- a/infra/k8s/ingress-deploy.yaml
+++ b/infra/k8s/ingress-deploy.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: ticketing.dev
+    - host: tickeet.ddns.net
       http:
         paths:
           - path: /api/users/?(.*)
